# Claude-Usage-Monitor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
claude-usage-monitor/: background.js  codex_content.js  codex_inject.js  codex_quota.js  codex_quota.test.mjs  content.js  manifest.json  popup.html  popup.js  pricing_detector.js
docs/: topic-whiteboard-design.md
scripts/: migrate_codex_x10_le_0531.py
src/: App.tsx  colors.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  claims.rs  commands.rs  db.rs  discovery.rs  http_server.rs  image_archive.rs  lib.rs  local_usage.rs  main.rs  models.rs  recommender.rs  recommender_tests.rs  session_parse.rs  session_remote.rs  session_store.rs  state.rs  token_usage.rs
src/assets/: quota-rest-finished.LICENSE.txt  quota-segment-complete.LICENSE.txt
src/components/: AlarmBell.tsx  InboxPanel.tsx  PlanOverrideSelect.tsx  ProgressBar.tsx  SessionRacePanel.tsx  SettingsModal.tsx  StatusCards.tsx  TokenUsagePanel.tsx
src/hooks/: useData.ts  useInbox.ts  useResetAlarm.ts
src/sessions/: AddSourceDialog.tsx  DraftBar.tsx  Heatmap.tsx  Markdown.tsx  MessageStream.tsx  MessageText.tsx  NetworkButton.tsx  NetworkPanel.tsx  SessionTimeline.tsx  SessionsApp.tsx  Sidebar.tsx  SourceBar.tsx  StatBar.tsx  api.ts  discovery.ts  format.ts  lanes.ts  types.ts
src/types/: index.ts
src/utils/: format.ts  planTiers.ts  quotaRaceEvents.ts  quotaRaceStorage.ts
