[package]
name = "claude-usage-monitor"
version = "1.1.4"
edition = "2021"

[lib]
name = "claude_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
base64 = "0.22"
winreg = "0.55"
mdns-sd = "0.11"

[profile.dev]
incremental = true

# 本机内存紧张时 rustc 易 OOM：只给本 package 关 debuginfo 降编译内存峰值
# （deps 不受影响、不重编；本 app 不在自身内调试 Rust 崩溃栈，无损）
[profile.dev.package.claude-usage-monitor]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
